--- a/rgcmidcpp/CMakeLists.txt
+++ b/rgcmidcpp/CMakeLists.txt
@@ -3,23 +3,24 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
 set(HEADERS
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/midireader/smf.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/midireader/midi_chart.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/smf.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/midi_chart.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcwriter.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcreader.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgctypes.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/binutils.hpp)
 
 set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/midireader/smf.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/midireader/midi_chart.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcwriter.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcreader.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/smf.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/midi_chart.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcwriter.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc/rgcreader.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/binutils.cpp)
 
 
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/midireader/
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/
     ${CMAKE_CURRENT_SOURCE_DIR}/src/rgc
     ${CMAKE_CURRENT_SOURCE_DIR}/src/
     )
