Some windows build fixes.

--- a/rgcmidcpp/CMakeLists.txt
+++ b/rgcmidcpp/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
+# CMake on windows doesnt seem to support setting up for C++17 yet.
+if(MSVC)
+    add_compile_options("/std:c++latest")
+endif()
+
+
 set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/smf.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/midi/midi_chart.hpp
